--- a/changelog/1.1.1.md
+++ b/changelog/1.1.1.md
@@ -1,5 +1,9 @@
 # jadbreaks Patch 1.1.1
 
+## Warper Changes
+![recipe](recipes/warpernew.png)
+* The warper perk's recipe has been reduced in cost.
+
 ## Death Location Help
 ![img](https://i.imgur.com/a0isHbw.png)
 * When you die, the location of your death is easily accessible.
